--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -1,3 +1,14 @@
 {
-  "extends": ["react-app", "react-app/jest"]
+  "plugins": [
+    "prettier"
+  ],
+  "extends": [
+    "react-app", 
+    "react-app/jest", 
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }]
+  }
 }
