--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release version `${{ steps.step_get_tag_id.outputs.tag }}`
+          release_name: Release version ${{ steps.step_get_tag_id.outputs.tag }}
           body: |
             ${{ steps.step_changelog_id.outputs.changelog }}
           draft: false
