--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -29,11 +29,18 @@ jobs:
 
       - name: Install dependencies
         run: yarn
-      
+
       - name: Run release-it
-        run: yarn release
+        run: |
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${GITHUB_TOKEN}@github.com/${REPOSITORY}
+          yarn release
         env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ github.repository }}
       
       # Publish package to NPM
       - name: Publish package to NPM
