--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,18 +6,22 @@ on:
 
 jobs:
   release:
-    name: Release
+    name: Release job
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
       
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v1
+      - name: Setup NodeJS ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
       
       - name: Cache dependencies
@@ -28,9 +32,9 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --no-progress --non-interactive
 
-      - name: Run release-it
+      - name: Run release scripts
         run: |
           git config --global user.name $USER_NAME
           git config --global user.email $USER_EMAIL
@@ -39,7 +43,7 @@ jobs:
         env:
           USER_NAME: 'github-actions[bot]'
           USER_EMAIL: 'github-actions[bot]@users.noreply.github.com'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           REPOSITORY: ${{ github.repository }}
       
       # Publish package to NPM
