--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -43,26 +43,22 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Release
+      - name: Setup git config
         run: |
           git config --global user.name $USER_NAME
           git config --global user.email $USER_EMAIL
           git remote set-url origin https://${GITHUB_TOKEN}@github.com/${REPOSITORY}
-          yarn release
-        env:
-          USER_NAME: 'github-actions[bot]'
-          USER_EMAIL: 'github-actions[bot]@users.noreply.github.com'
-          REPOSITORY: ${{ github.repository }}
-          GITHUB_TOKEN: ${{ github.token }} #GITHUB_TOKEN is required
       
-      - name: Deploy to GitHub Pages
+      - name: Release
+        run: yarn release
+      
+      - name: Deploy
         run: |
-          git config --global user.name $USER_NAME
-          git config --global user.email $USER_EMAIL
           git remote set-url origin https://${DEPLOY_ACCESS_TOKEN}@github.com/${REPOSITORY}
           yarn deploy -m "${{ github.event.head_commit.message }}" 
-        env:
-          USER_NAME: 'github-actions[bot]'
-          USER_EMAIL: 'github-actions[bot]@users.noreply.github.com'
-          DEPLOY_ACCESS_TOKEN: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
-          REPOSITORY: ${{ github.repository }}
+    env:
+      USER_NAME: 'github-actions[bot]'
+      USER_EMAIL: 'github-actions[bot]@users.noreply.github.com'
+      GITHUB_TOKEN: ${{ github.token }} #GITHUB_TOKEN is required for `release-it`
+      DEPLOY_ACCESS_TOKEN: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
+      REPOSITORY: ${{ github.repository }}
