--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -1,13 +1,6 @@
 {
-  "plugins": [
-    "prettier"
-  ],
-  "extends": [
-    "react-app", 
-    "react-app/jest", 
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
+  "plugins": ["prettier"],
+  "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended"],
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }]
   }
